--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -4,7 +4,7 @@
   height: 4rem;
   padding: 0 2rem;
   border: none;
-  border-radius: 0.5rem;
+  border-radius: var(--ifm-global-border-radius);
   font-weight: var(--ifm-font-weight-bold);
   font-size: var(--font-size-normal);
   transition: background-color 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
