--- a/src/css/global.css
+++ b/src/css/global.css
@@ -42,16 +42,23 @@
 
 :root {
   --palette-black: #21222c;
+  --palette-gray: #32343e;
   --palette-pale-blue: #b1b5d3;
   --palette-pink: #d14671;
+  --palette-green: #66bb6a;
   --palette-pink-darker: #be2f5b;
   --palette-midnight: #141725;
   --palette-rock: #262833;
+  --palette-sky: #81d3f9;
   --palette-turquoise: #0cc0df;
   --palette-white: #fff;
+  --palette-white-02: rgba(255, 255, 255, 0.03);
+  --palette-white-05: rgba(255, 255, 255, 0.05);
   --palette-white-10: rgba(255, 255, 255, 0.1);
   --palette-white-20: rgba(255, 255, 255, 0.2);
+  --palette-white-30: rgba(255, 255, 255, 0.3);
   --palette-white-darker: #d9d9d9;
+  --palette-yellow: #ffd54f;
 
   --font-size-small: 14px;
   --font-size-normal: 16px;
@@ -71,6 +78,9 @@
   --ifm-color-primary-light: #d75c82;
   --ifm-color-primary-lighter: #d9688b;
   --ifm-color-primary-lightest: #e289a4;
+  --ifm-color-info: var(--palette-sky);
+  --ifm-color-success: var(--palette-green);
+  --ifm-color-warning: var(--palette-yellow);
   --ifm-dropdown-background-color: var(--palette-rock);
   --ifm-font-color-base: var(--palette-white);
   --ifm-font-family-base: "Inter", system-ui, -apple-system, Segoe UI, Roboto,
@@ -94,6 +104,7 @@
   --ifm-navbar-search-input-icon: url('data:image/svg+xml;utf8,<svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13 12.9999L9.19421 9.19409" stroke="white" stroke-width="1.4" stroke-miterlimit="10" stroke-linejoin="bevel"/><path d="M5.79999 10.6C8.45096 10.6 10.6 8.45096 10.6 5.79999C10.6 3.14903 8.45096 1 5.79999 1C3.14903 1 1 3.14903 1 5.79999C1 8.45096 3.14903 10.6 5.79999 10.6Z" stroke="white" stroke-width="1.4" stroke-miterlimit="10" stroke-linejoin="bevel"/></svg>');
   --ifm-navbar-shadow: 0 1px 0 0 var(--palette-white-10);
   --ifm-pre-background: var(--palette-midnight);
+  --ifm-table-cell-padding:  0.15rem 1rem;
   --ifm-toc-border-color: var(--palette-white-10);
 }
 
@@ -107,9 +118,13 @@ html[data-theme="dark"] {
  *
  **/
 
+nav {
+  --ifm-font-size-base: var(--font-size-normal);
+}
+
 .navbar__link,
 .dropdown__link {
-  font-size: var(--font-size-normal);
+  font-size: var(--ifm-font-size-base);
 }
 
 /* @TODO: Remove this! */
@@ -118,6 +133,10 @@ html[data-theme="dark"] {
   display: none;
 }
 /* END TODO */
+
+.main-wrapper {
+  margin-top: 3rem;
+}
 
 /**
  *
