--- a/src/components/Jumbotron/styles.module.css
+++ b/src/components/Jumbotron/styles.module.css
@@ -57,13 +57,12 @@
   position: absolute;
   left: -25px;
   bottom: -25px;
-  border: 2px solid transparent;
   border-radius: 50%;
-  transition: border-color 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  transition: filter 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
 .jumbotron__docker-icon:hover {
-  border-color: var(--palette-white);
+  filter: brightness(0.9);
   cursor: pointer;
 }
 
