--- a/src/css/global.css
+++ b/src/css/global.css
@@ -52,7 +52,7 @@
   --palette-sky: #81d3f9;
   --palette-turquoise: #0cc0df;
   --palette-white: #fff;
-  --palette-white-02: rgba(255, 255, 255, 0.03);
+  --palette-white-03: rgba(255, 255, 255, 0.03);
   --palette-white-05: rgba(255, 255, 255, 0.05);
   --palette-white-10: rgba(255, 255, 255, 0.1);
   --palette-white-20: rgba(255, 255, 255, 0.2);
@@ -127,12 +127,12 @@ nav {
   --ifm-h3-vertical-rhythm-top: 2;
   --ifm-heading-vertical-rhythm-top: 2; /* h4 */
   --ifm-heading-vertical-rhythm-bottom: 0.4;
-  --ifm-table-background: var(--palette-white-02);
+  --ifm-table-background: var(--palette-white-03);
   --ifm-table-border-color: var(--palette-black);
   --ifm-table-border-width: 4px;
   --ifm-table-head-background: var(--palette-gray);
   --ifm-table-head-color: var(--palette-white);
-  --ifm-table-stripe-background: var(--palette-white-02);
+  --ifm-table-stripe-background: var(--palette-white-03);
 }
 
 .admonition {
@@ -149,7 +149,7 @@ nav {
 .pagination-nav {
   --ifm-link-color: var(--palette-white);
   --ifm-link-hover-color: var(--palette-white);
-  --ifm-pagination-nav-color-hover: transparent;
+  --ifm-pagination-nav-color-hover: var(--palette-white);
   --ifm-pagination-nav-border-radius: var(--ifm-global-border-radius);
   --ifm-color-emphasis-300: transparent;
 }
