--- a/src/theme/DocPage/styles.module.css
+++ b/src/theme/DocPage/styles.module.css
@@ -54,7 +54,7 @@
   --ifm-menu-link-padding-horizontal: 0.75rem;
   display: flex;
   justify-content: center;
-  color: var(--palette-pale-blue);
+  font-family: var(--font-family-base);
 }
 
 .doc__sidebar {
