--- a/src/theme/DocPage/styles.module.css
+++ b/src/theme/DocPage/styles.module.css
@@ -1,15 +1,15 @@
-:global(.menu__link),
-:global(.menu__list) {
+:global(.docs-sidebar .menu__link),
+:global(.docs-sidebar .menu__list) {
   border-radius: var(--ifm-global-border-radius);
 }
 
-:global(.menu__link::after) {
+:global(.docs-sidebar .menu__link::after) {
   background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 15 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L7.5 9L14 1' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
   background-size: 12px 12px;
   background-repeat: no-repeat;
 }
 
-:global(.menu > .menu__list) {
+:global(.docs-sidebar .menu > .menu__list) {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   padding-left: 0.75rem;
@@ -17,12 +17,12 @@
   background: var(--palette-white-05);
 }
 
-:global(.menu > .menu__list > li > .menu__link) {
+:global(.docs-sidebar .menu > .menu__list > li > .menu__link) {
   text-transform: uppercase;
   font-weight: var(--ifm-font-weight-bold);
 }
 
-:global(.menu__link--active.active) {
+:global(.docs-sidebar .menu__link--active.active) {
   --ifm-menu-color-active: var(--palette-white);
 }
 
