--- a/src/components/Jumbotron/styles.module.css
+++ b/src/components/Jumbotron/styles.module.css
@@ -58,7 +58,7 @@
   left: -25px;
   bottom: -25px;
   border-radius: 50%;
-  transition: filter 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  transition: filter 100ms var(--transition-bezier);
 }
 
 .jumbotron__docker-icon:hover {
