--- a/src/components/Whatis/styles.module.css
+++ b/src/components/Whatis/styles.module.css
@@ -76,7 +76,7 @@
 .whatis__toggle {
   margin-left: -100%;
   opacity: 0;
-  transition: opacity 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  transition: opacity 100ms var(--transition-bezier);
 }
 
 .whatis__toggle--active {
