--- a/src/css/global.css
+++ b/src/css/global.css
@@ -41,13 +41,13 @@
 **/
 
 :root {
-  --palette-black: #21222c;
+  --palette-charade: #21222c;
   --palette-gray: #32343e;
+  --palette-green: #66bb6a;
+  --palette-midnight: #141725;
   --palette-pale-blue: #b1b5d3;
   --palette-pink: #d14671;
-  --palette-green: #66bb6a;
   --palette-pink-darker: #be2f5b;
-  --palette-midnight: #141725;
   --palette-rock: #262833;
   --palette-sky: #81d3f9;
   --palette-turquoise: #0cc0df;
@@ -60,6 +60,8 @@
   --palette-white-darker: #d9d9d9;
   --palette-yellow: #ffd54f;
 
+  --transition-bezier: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+
   --font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Ubuntu, Cantarell, Helvetica, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Android Emoji", EmojiSymbols, "EmojiOne Mozilla",
@@ -68,11 +70,12 @@
   --font-size-small: 15px;
   --font-size-normal: 16px;
   --font-size-large: 18px;
+  --font-size-llarge: 24px;
   --font-size-xlarge: 32px;
   --font-size-xxlarge: 46px;
   --font-size-xxxlarge: 64px;
 
-  --ifm-background-color: var(--palette-black);
+  --ifm-background-color: var(--palette-charade);
   --ifm-blockquote-color: var(--palette-pale-blue);
   --ifm-code-background: var(--palette-gray);
   --ifm-code-color: var(--palette-white);
@@ -95,12 +98,12 @@
     "Liberation Mono", "Courier New", monospace;
   --ifm-font-size-base: var(--font-size-small);
   --ifm-global-border-radius: 8px;
-  --ifm-h1-font-size: 56px;
-  --ifm-h2-font-size: 24px;
+  --ifm-h1-font-size: var(--font-size-xxlarge);
+  --ifm-h2-font-size: var(--font-size-llarge);
   --ifm-h4-font-size: var(--font-size-large);
   --ifm-heading-margin-bottom: 1.5rem;
   --ifm-link-color: var(--palette-turquoise);
-  --ifm-navbar-background-color: var(--palette-black);
+  --ifm-navbar-background-color: var(--palette-charade);
   --ifm-navbar-height: 80px;
   --ifm-navbar-item-padding-horizontal: 20px;
   --ifm-navbar-search-input-background-color: var(--palette-white-10);
@@ -112,7 +115,7 @@
 }
 
 html[data-theme="dark"] {
-  --ifm-background-color: var(--palette-black);
+  --ifm-background-color: var(--palette-charade);
   --ifm-color-emphasis-300: var(--palette-pale-blue);
 }
 
@@ -132,7 +135,7 @@ nav {
   --ifm-heading-vertical-rhythm-top: 2; /* h4 */
   --ifm-heading-vertical-rhythm-bottom: 0.4;
   --ifm-table-background: var(--palette-white-03);
-  --ifm-table-border-color: var(--palette-black);
+  --ifm-table-border-color: var(--palette-charade);
   --ifm-table-border-width: 4px;
   --ifm-table-head-background: var(--palette-gray);
   --ifm-table-head-color: var(--palette-white);
@@ -151,6 +154,7 @@ nav {
 }
 
 .pagination-nav {
+  --ifm-color-content-secondary: var(--palette-white);
   --ifm-link-color: var(--palette-white);
   --ifm-link-hover-color: var(--palette-white);
   --ifm-pagination-nav-color-hover: var(--palette-white);
@@ -219,10 +223,4 @@ nav {
   background-position-x: 1rem;
   background-position-y: center;
   background-repeat: no-repeat;
-}
-
-@media (max-width: 1052px) and (min-width: 996px) {
-  :root {
-    --ifm-navbar-item-padding-horizontal: 15px;
-  }
 }
