--- a/src/css/global.css
+++ b/src/css/global.css
@@ -66,6 +66,7 @@
     Ubuntu, Cantarell, Helvetica, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Android Emoji", EmojiSymbols, "EmojiOne Mozilla",
     "Twemoji Mozilla", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-inter: Inter, var(--font-family-base);
 
   --font-size-small: 15px;
   --font-size-normal: 16px;
@@ -93,7 +94,7 @@
   --ifm-color-warning: var(--palette-yellow);
   --ifm-dropdown-background-color: var(--palette-rock);
   --ifm-font-color-base: var(--palette-white);
-  --ifm-font-family-base: Inter, var(--font-family-base);
+  --ifm-font-family-base: var(--font-family-inter);
   --ifm-font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
   --ifm-font-size-base: var(--font-size-small);
@@ -184,6 +185,10 @@ nav {
 
 .main-wrapper {
   margin-top: 3rem;
+}
+
+main article header h2 a {
+    color: var(--palette-white-darker);
 }
 
 /**
