--- a/src/components/Cards/styles.module.css
+++ b/src/components/Cards/styles.module.css
@@ -26,5 +26,5 @@
 .cards__header {
   margin-bottom: 1rem;
   font-size: var(--font-size-large);
-  font-weight: 700;
+  font-weight: var(--ifm-font-weight-bold);
 }
