--- a/src/components/GetStarted/styles.module.css
+++ b/src/components/GetStarted/styles.module.css
@@ -1,59 +1,93 @@
+.getStarted {
+  --ifm-link-hover-color: var(--palette-pink);
+  padding-top: 4rem;
+  padding-bottom: 6.5rem;
+}
+
 .getStarted__title {
-  font-weight: var(--ifm-font-weight-semibold);
+  font-size: var(--font-size-xxxlarge);
 }
 
 .getStarted__subtitle {
   color: var(--palette-pale-blue);
 }
 
-.getStarted__column {
+.getStarted__details {
   display: flex;
-  flex: 1;
-  flex-direction: column;
-}
-
-.getStarted__column--left {
-  margin-right: 2rem;
-}
-
-.getStarted__column--right {
-  margin-left: 2rem;
-}
-
-.getStarted__text {
+  height: 55px;
+  padding: 0 2rem;
+  align-items: center;
+  border-radius: calc(var(--ifm-global-border-radius) / 2);
+  color: var(--palette-pale-blue);
+  background: var(--palette-rock);
   font-size: var(--font-size-normal);
+}
+
+.getStarted__details--download {
+  margin-right: 1rem;
+}
+
+.getStarted__top {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+}
+
+.getStarted__cta {
+  display: flex;
+  margin-top: 2.9rem;
+}
+
+.getStarted__links {
+  display: flex;
+  margin-top: 2rem;
+}
+
+.getStarted__link {
+  text-decoration: underline;
   color: var(--palette-pale-blue);
 }
 
-.getStarted__type:not(:first-child) {
-  margin-top: 3rem;
-}
-
-.getStarted__snippet {
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
+.getStarted__link:not(:last-child) {
+  margin-right: 2.5rem;
 }
 
 @media (max-width: 996px) {
   .getStarted {
-    align-items: center;
+    padding-bottom: 3.5rem;
+    padding-top: 1.5rem;
   }
 
   .getStarted__title {
+    font-size: var(--font-size-xxlarge);
     text-align: center;
   }
 
   .getStarted__subtitle {
+    max-width: 500px;
     text-align: center;
   }
 
-  .getStarted__column {
-    margin: 0;
+  .getStarted__cta {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    flex-direction: column;
+    align-items: center;
   }
 
-  .getStarted__column--right {
-    max-width: 100%;
-    margin-top: 2rem;
+  .getStarted__details {
+    margin: 0;
+    margin-bottom: 1rem;
+  }
+
+  .getStarted__top {
+    padding-top: 0;
+    align-items: center;
+    flex-basis: auto;
+  }
+
+  .getStarted__link:not(:last-child) {
+    margin-right: 1.5rem;
   }
 }
