--- a/src/css/global.css
+++ b/src/css/global.css
@@ -70,8 +70,6 @@
   --ifm-navbar-background-color: var(--palette-charade);
   --ifm-navbar-height: 80px;
   --ifm-navbar-item-padding-horizontal: 20px;
-  --ifm-navbar-search-input-background-color: var(--palette-white-10);
-  --ifm-navbar-search-input-icon: url('data:image/svg+xml;utf8,<svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13 12.9999L9.19421 9.19409" stroke="white" stroke-width="1.4" stroke-miterlimit="10" stroke-linejoin="bevel"/><path d="M5.79999 10.6C8.45096 10.6 10.6 8.45096 10.6 5.79999C10.6 3.14903 8.45096 1 5.79999 1C3.14903 1 1 3.14903 1 5.79999C1 8.45096 3.14903 10.6 5.79999 10.6Z" stroke="white" stroke-width="1.4" stroke-miterlimit="10" stroke-linejoin="bevel"/></svg>');
   --ifm-navbar-shadow: 0 1px 0 0 var(--palette-white-10);
   --ifm-pre-background: var(--palette-midnight);
   --ifm-table-cell-padding: 0.15rem 1rem;
@@ -81,6 +79,28 @@
 html[data-theme="dark"] {
   --ifm-background-color: var(--palette-charade);
   --ifm-color-emphasis-300: var(--palette-pale-blue);
+}
+
+html[data-theme="dark"] .DocSearch {
+  --docsearch-text-color: var(--ifm-font-color-base);
+  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
+  --docsearch-container-background: rgba(0, 0, 0, 0.5);
+  /* Modal */
+  --docsearch-modal-background: var(--ifm-background-color);
+  /* Search box */
+  --docsearch-searchbox-background: var(--palette-white-10);
+  --docsearch-searchbox-focus-background: var(--palette-midnight);
+  /* Hit */
+  --docsearch-hit-color: var(--ifm-font-color-base);
+  --docsearch-hit-active-color: var(--ifm-color-white);
+  --docsearch-hit-background: var(--palette-rock);
+  /* Footer */
+  --docsearch-footer-background: var(--ifm-background-color);
+  --docsearch-key-gradient: linear-gradient(
+    -26.5deg,
+    var(--palette-gray) 0%,
+    var(--palette-rock) 100%
+  );
 }
 
 /**
@@ -139,13 +159,6 @@ nav {
   font-size: var(--ifm-font-size-base);
 }
 
-/* @TODO: Remove this! */
-/* Dirty hack, this will be fixed in the next Docusaurus release */
-.navbar .react-toggle {
-  display: none;
-}
-/* END TODO */
-
 .main-wrapper {
   margin-top: 3rem;
 }
@@ -156,6 +169,10 @@ main article header h2 a {
 
 .main-wrapper main > article > section .banner {
   display: none;
+}
+
+.DocSearch-Button-Key {
+  display: none !important;
 }
 
 /**
@@ -195,4 +212,8 @@ main article header h2 a {
   background-position-x: 1rem;
   background-position-y: center;
   background-repeat: no-repeat;
+}
+
+.color--pink {
+  color: var(--palette-pink);
 }
