--- a/src/theme/Navbar/styles.module.css
+++ b/src/theme/Navbar/styles.module.css
@@ -3,6 +3,10 @@
   font-size: var(--font-size-small);
 }
 
+.brand {
+  width: 126px;
+}
+
 @media (max-width: 768px) {
   .getStarted {
     margin-left: 0.75rem;
