--- a/src/theme/Footer/styles.module.css
+++ b/src/theme/Footer/styles.module.css
@@ -57,7 +57,7 @@
 }
 
 .footer__link {
-  padding: 0.25rem 0;
+  margin-bottom: 0.6rem;
   flex: 1;
   color: var(--palette-white);
   font-size: var(--font-size-normal);
