feat(alpha-0.63): use custom ssr template + improve titles/descriptions + simplify metas

--- a/src/theme/Layout/styles.module.css
+++ b/src/theme/Layout/styles.module.css
@@ -1,7 +1,10 @@
 .wrapper {
-  display: flex;
   margin-top: 3rem;
   flex: 1 0 auto;
+}
+
+.flex {
+  display: flex;
   flex-direction: column;
 }
 
