--- a/src/css/global.css
+++ b/src/css/global.css
@@ -12,7 +12,8 @@
   --palette-pale-blue: #b1b5d3;
   --palette-pink: #d14671;
   --palette-pink-darker: #be2f5b;
-  --palette-rock: #262833;
+  --palette-rock: rgb(var(--palette-rock-raw));
+  --palette-rock-raw: 38, 40, 51;
   --palette-sky: #81d3f9;
   --palette-turquoise: #0cc0df;
   --palette-white: #fff;
