feat: add careers page

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -67,11 +67,13 @@
   --ifm-h2-font-size: var(--font-size-llarge);
   --ifm-h4-font-size: var(--font-size-large);
   --ifm-heading-margin-bottom: 1.5rem;
+  --ifm-hr-border-color: var(--palette-white-20);
   --ifm-link-color: var(--palette-turquoise);
   --ifm-menu-link-sublist-icon: url("/img/infima/arrow.svg");
   --ifm-navbar-background-color: var(--palette-charade);
   --ifm-navbar-height: 80px;
   --ifm-navbar-item-padding-horizontal: 20px;
+  --ifm-navbar-padding-horizontal: 0;
   --ifm-navbar-shadow: 0 1px 0 0 var(--palette-white-10);
   --ifm-paragraph-margin-bottom: 1.25rem;
   --ifm-pre-background: var(--palette-midnight);
@@ -256,4 +258,17 @@ main article header h2 a {
 
 .screenshot--small {
   max-width: 500px;
+}
+
+.margin-auto {
+  margin: 0 auto;
+}
+
+.container.row {
+  padding: 0;
+}
+
+.career h1 {
+  margin-bottom: 4rem;
+  text-align: center;
 }
