--- a/src/theme/Layout/styles.module.css
+++ b/src/theme/Layout/styles.module.css
@@ -12,6 +12,11 @@
   display: none;
 }
 
+.career {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
 @media (max-width: 996px) {
   .wrapper {
     margin-top: 2rem;
