--- a/src/theme/AnnouncementBar/styles.module.css
+++ b/src/theme/AnnouncementBar/styles.module.css
@@ -15,7 +15,9 @@
   width: 4rem;
   padding: 0;
   justify-content: center;
+  align-items: center;
   border: none;
+  outline: none;
   background: none;
   color: inherit;
   font-size: 2rem;
