--- a/src/theme/Footer/styles.module.css
+++ b/src/theme/Footer/styles.module.css
@@ -1,6 +1,5 @@
 .footer {
   display: flex;
-  min-height: calc(480px + 4.5rem);
   flex-direction: column;
   background: var(--palette-rock);
 }
@@ -96,6 +95,7 @@
 
   .footer__column--right {
     margin: 0;
+    margin-top: 3rem;
     flex: 0;
     justify-content: space-between;
   }
